# OpenSourceSmartGlasses

./: .gitignore  .gitmodules  LICENSE  README.md  mic_array_flex_board_kicad_project.step  temple_right.stl
code/microphone-library-for-pico-main/: .gitignore  CMakeLists.txt  README.md  build.sh
code/microphone-library-for-pico-main/examples/hello_pdm_microphone/: CMakeLists.txt  main.c
code/microphone-library-for-pico-main/examples/usb_microphone/: .main.c.swp  CMakeLists.txt  main.c  plot_mic.py  tusb_config.h  usb_microphone.c  usb_microphone.h
code/microphone-library-for-pico-main/examples/usb_microphone_array/: CMakeLists.txt  main.c  usb_descriptors.c
electronics_and_firmware/OSSG_v0p3/: #auto_saved_files#  ANT_PRO-OB-440.kicad_mod  BOM_draft.csv  OSSG_BOM.csv  OSSG_components_lib.kicad_sym  OSSG_v0p3.kicad_pcb  OSSG_v0p3.kicad_prl  OSSG_v0p3.kicad_pro  OSSG_v0p3.kicad_sch  OSSG_v0p3.kicad_sch-bak  OSSG_v0p3_esp32board_CAD.step  fp-info-cache  fp-lib-table  sym-lib-table
electronics_and_firmware/OSSG_v0p4/: OSSG_components_lib.kicad_sym  OSSG_v0p3_BOM.csv  OSSG_v0p4.kicad_pcb  OSSG_v0p4.kicad_sch  Power.kicad_sch  REG_NCP167BMX330TBG.kicad_mod  changelog.md  fp-info-cache
electronics_and_firmware/OSSG_v0p4-2P/: OSSG_components_lib.kicad_sym  OSSG_v0p4-Final_BoM.ods  OSSG_v0p4.kicad_pcb  OSSG_v0p4.kicad_prl  OSSG_v0p4.kicad_pro  OSSG_v0p4.kicad_sch  OSSG_v0p4p5_BoM.ods  PRO-OB-440.lib  Power.kicad_sch  README.md  fp-info-cache
electronics_and_firmware/OSSG_v0p4-2S/: H2U34W1H1Z0400_chip_antenna.kicad_mod  NCP167BMX330TBG.lib  NCP167BMX330TBG.step  NN01-102.step  OSSG_components_lib.kicad_sym  OSSG_v0p4.kicad_pro  Power.kicad_sch  README.md  XCVR_NN01-102.kicad_mod  fp-lib-table
electronics_and_firmware/OSSG_v0p5/: README.md  (+15 more)
electronics_and_software/code/microphone-library-for-pico-main/: CMakeLists.txt  check_mic.sh
electronics_and_software/code/microphone-library-for-pico-main/examples/usb_microphone/: hello_world.c
electronics_and_software/code/microphone-library-for-pico-main/src/: pdm_microphone.c  pdm_microphone_slave.pio
electronics_and_software/code/microphone-library-for-pico-main/src/OpenPDM2PCM/: OpenPDMFilter.h
electronics_and_software/code/microphone-library-for-pico-main/src/include/pico/: pdm_microphone.h
mechanical/: ARM_COVER_LEFT_3DPRINT_OSSG_0p3.stl  ARM_COVER_RIGHT_3DPRINT_OSSG_0p3.stl  ARM_LEFT_3DPRINT_OSSG_0p3.stl  ARM_RIGHT_3DPRINT_OSSG_0p3.stl  Lens.stp  MAIN_3DPRINT_OSSG_0p2.stl  MAIN_3DPRINT_OSSG_0p3.stp  MAIN_FRAME_Fusion.stl  MAIN_FRAME_Fusion_BATTERY_COVER_LEFT.stl  MAIN_FRAME_Fusion_FRONT.stl  MAIN_FRAME_Fusion_LEFT_ARM.stl  MAIN_FRAME_Fusion_LEFT_ARM_COVER.stl  MAIN_FRAME_Fusion_RIGHT_ARM.stl  MAIN_FRAME_Fusion_RIGHT_ARM_COVER.stl  README.md  ear_battery_to_scale_OSSG.f3d  ear_battery_to_scale_OSSG.step
pcb/: BatterySolderOn.kicad_mod  MSA_sch_lib.bak  MSA_sch_lib.kicad_sym  slim_stack_molex_PLUG_5035521222.kicad_mod  slim_stack_molex_PLUG_5035521222.stp  slim_stack_molex_RECEPTACLE_5035481222.kicad_mod  slim_stack_molex_receptacle_12pox_5035481222.stp
python_websocket_server/: README.ME  server.py
(+400 files in other folders)
